refactor: 주요 로직 단위로 메소드 분리